...
        modifier = Modifier.testTag(radioButtonGroupsExample4HeadingTestTag)
    )
    BodyText(textId = R.string.radio_button_groups_example_4_description)
    Spacer(modifier = Modifier.height(8.dp))

    // Key failure: This RadioButtonGroup's items do not provide sufficient group context. They only
    // announce "Yes" and "No" in a screen reader without saying what question is being answered.
    // See Example 5 for how RadioButton item contentDescriptions can address this problem.
    RadioButtonGroup(
        groupLabel = stringResource(id = R.string.radio_button_groups_example_4_question),
        itemLabels = options,
        selectedIndex = example4Selection,
        selectHandler = setExample4Selection,
...
    }
}

@Preview(showBackground = true)
@Composable
private fun FauxRadioGroupPreview() {
    val options = listOf("Banana", "Grape", "Orange")
    val (selectedOption, setSelectedOption) = remember { mutableIntStateOf(0) }
    ComposeAccessibilityTechniquesTheme {
        Column {
            FauxRadioButtonGroup(
                groupLabel = "Pick a fruit:",
                itemLabels = options,
...
